--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <header>
+        <nav>
+            <h2>G3 Architects</h2>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
 
     </header>
     <main>
